# school-photo-dl

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tma_get_selenium.py
.github/workflows/: pylint.yml
klassly/: klassly_get.py
shared/: driver.py  utils.py
src/school_photo_dl/: cli.py
src/school_photo_dl/tma/: scraper.py
tests/: test_smoke.py
tma/: tma_get_selenium.py
